# vibe-style

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md  action.yml  build.rs
.github/workflows/: benchmark.yml  language.yml  release.yml
docs/: governance.md  index.md  policy.md
docs/benchmarks/: 2026-03-12_vstyle-module-quality-follow-up.md  2026-03-12_vstyle-release-runtime-baseline.md  2026-03-12_vstyle-semantic-runtime-baseline.md  2026-03-12_vstyle-spacing-quality-regex-hoist-follow-up.md  2026-03-12_vstyle-spacing-regex-follow-up.md  2026-03-12_vstyle-spacing-regex-hoist.md  2026-03-14_vstyle-benchmark-tracking-bootstrap.md
docs/decisions/: index.md
docs/guide/: benchmark_tracking.md  index.md
docs/guide/development/languages/: index.md  python.md  rust.md
docs/plans/: 2026-03-11_vstyle-release-runtime-acceleration.md  2026-03-12_vstyle-module-quality-follow-up.md  2026-03-12_vstyle-semantic-runtime-follow-up.md  2026-03-12_vstyle-spacing-quality-regex-hoist-follow-up.md  2026-03-12_vstyle-spacing-regex-follow-up.md  2026-03-12_vstyle-spacing-regex-hoist.md  2026-03-13_vstyle-pubfi-noop-tune-fast-path.md  2026-03-27_vstyle-mod-doc-and-keepalive-rules.json
docs/reference/: index.md
docs/research/: index.md
docs/research/benchmarks/: 2026-03-12_vstyle-release-runtime-baseline.md  2026-03-12_vstyle-semantic-runtime-baseline.md  2026-03-12_vstyle-spacing-quality-regex-hoist-follow-up.md  2026-03-12_vstyle-spacing-regex-follow-up.md  2026-03-13_vstyle-pubfi-noop-tune-fast-path.md  index.md
docs/runbook/: benchmark_tracking.md  index.md
docs/spec/: index.md  style_import_derive_interactions.md  style_rule_backends.md  swift_style_rule_applicability.md  system_style_import_derive_interactions.md  system_style_rule_backends.md
scripts/: bench-release-vstyle.sh  bench-semantic-vstyle.sh  rust-style-check.py
skills/vstyle/: SKILL.md
skills/vstyle/agents/: openai.yaml
src/: cli.rs  main.rs  style.rs  style_checker.rs
src/style/: bindings.rs  file.rs  fixes.rs  generics.rs  impls.rs  imports.rs  mod.rs  module.rs  quality.rs  semantic.rs  shared.rs  spacing.rs  swift.rs  test_modules.rs  types.rs
src/style_checker/: file.rs  fixes.rs  impls.rs  imports.rs  module.rs  quality.rs  shared.rs  spacing.rs
tests/: let_mut_reorder.rs  mod007_super_import.rs  pub_use_self_group.rs  swift_curate.rs  type_alias_rename.rs
