[package]
authors     = ["Xavier Lau <x@acg.box>"]
build       = "build.rs"
categories  = []
description = "Rust style checker with syntax and semantic analysis, plus a safe auto-fixer for deterministic, rule-driven code layout."
edition     = "2024"
homepage    = "https://hack.ink/vibe-style"
keywords    = []
license     = "GPL-3.0"
name        = "vibe-style"
readme      = "README.md"
repository  = "https://github.com/hack-ink/vibe-style"
resolver    = "3"
version     = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[profile.final-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "9.1", features = ["cargo"] }

[dependencies]
# crates.io
cargo_metadata = { version = "0.23" }
clap           = { version = "4.5", features = ["derive"] }
color-eyre     = { version = "0.6" }
once_cell      = { version = "1.21" }
ra_ap_syntax   = { version = "0.0.319" }
rayon          = { version = "1.11" }
regex          = { version = "1.12" }
serde_json     = { version = "1.0" }
