[package]
authors     = ["Xavier Lau <x@acg.box>"]
autobins    = false
build       = "build.rs"
categories  = []
description = "Style checker with Rust syntax and semantic analysis, plus first-batch Swift checks and safe deterministic fixes."
edition     = "2024"
homepage    = "https://hack.ink/vibe-style"
keywords    = []
license     = "GPL-3.0"
name        = "vibe-style"
readme      = "README.md"
repository  = "https://github.com/hack-ink/vibe-style"
resolver    = "3"
version     = "0.2.3"

[[bin]]
name = "vstyle"
path = "src/main.rs"

[[bin]]
name = "cargo-vstyle"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true

[profile.final-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "10.0", features = ["cargo"] }

[dependencies]
# crates.io
cargo_metadata = { version = "0.23" }
clap           = { version = "4.6", features = ["derive"] }
color-eyre     = { version = "0.6" }
ra_ap_syntax   = { version = "0.0.341" }
rayon          = { version = "1.12" }
regex          = { version = "1.12" }
serde_json     = { version = "1.0" }
